Newcomponentdatatable/force-app/main/default/objects/Contact/fields/Appointment_Held_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Held_Date__c</fullName>
    <label>Appointment Held Date</label>
    <type>Date</type>
</CustomField>