Newcomponentdatatable/force-app/main/default/objects/Contact/fields/Appointment_Scheduled_For__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Scheduled_For__c</fullName>
    <label>Appointment Scheduled For</label>
    <type>Date</type>
</CustomField>