Newcomponentdatatable/force-app/main/default/objects/Contact/fields/Appointment_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Set_Date__c</fullName>
    <label>Appointment Set Date</label>
    <type>Date</type>
</CustomField>