Newcomponentdatatable/force-app/main/default/objects/Contact/fields/QAL_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>QAL_Created_Date__c</fullName>
    <label>QAL Created Date</label>
    <type>Date</type>
</CustomField>